  * Fewer complaints (none?) from Gkt 3.20+ systems
  * OSX: fullscreen incomplete
    https://github.com/shoes/shoes3/issues/408 
  * app.name = now works as documented. 
    May Break Existing Scripts
  * command line --ruby working again
  * OSX: buttons can be created that use non default height.
  * Finally fixed the pristine gems error for OSX.


=== Developer Issues with 3.3.7
  * make/**/env.rb - link against distributed libyaml
  * Added lib/package/*  for merge packaging.
  * Using nsis 3.03 for Windows installer. Maintained and faster!
    with unicode and large string enabled. Potential to break
    user written installers.
  * Better cross build rakefiles: xrpi, xwin7 and xmsys2 targets.
  * Includes plugin for MXE to build all Windows dependencies
    new target 'mxe' is not mainstream yet but will become the preferred
    method of cross compiling for Windows.
    https://github.com/shoes/shoes3/wiki/MXE-Dependencies
  
-------------- Shoes 3.3.6 -------------------------------

=== New with 3.3.6
  * Can set font and stroke color for Button, edit_line, edit_box,
    list_box and switch native widgets. 
    https://github.com/shoes/shoes3/issues/179

=== Fixed with 3.3.6
    Linux versions may not have workable symlinks to .so's
    https://github.com/shoes/shoes3/issues/392

=== Developer Issues with 3.3.6
  * remove undocumented game mode for shoes.terminal
  * fixed many gtk3 deprecations. 
  
  
-------------- Shoes 3.3.5 --------------------------------

=== New with 3.3.5
  * Add 'wheel' event 
    https://github.com/shoes/shoes3/issues/287
  * can preprocess events with new event {block}
    https://github.com/shoes/shoes3/issues/383
    https://github.com/shoes/shoes3/wiki/event-streams
    Experts Only 
    
=== Fixed with 3.3.5
  * Arch linux (probably others) are missing symlinks to libraries
    https://github.com/shoes/shoes3/issues/392
  * Windows cpu utilization
    https://github.com/shoes/shoes3/issues/387