@@ -1,7 +1,4 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
+# Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
@@ -13,14 +10,23 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.define "empty" do |empty| 
-    empty.vm.box = "ubuntu/xenial64"
+    empty.vm.box = "bento/ubuntu-16.04"
+  end
+  config.vm.define "lin" do |lin|
+    lin.vm.box = "shoes3/linux"
   end
   config.vm.define "win" do |win|
-    win.vm.box = "shoes3/ubuntu-16.04"
-    win.vm.box_version = "1.0.1"
+    win.vm.box = "shoes3/windows"
   end
   config.vm.define "rpi" do |rpi|
     rpi.vm.box = "shoes3/raspberry"
+  end
+  config.vm.define "osx" do |osx|
+    osx.vm.box = "shoes3/darwin14"
+  end
+  config.vm.define "bsd" do |bsd|
+    #bsd.vm.box = "generic/freebsd11"
+    bsd.vm.box = "roboxes/freebsd11"
   end
 
   # Disable automatic box update checking. If you disable this, then
